[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/ColorSelecterScreen.gd" type="Script" id=1]
[ext_resource path="res://graphic/P1.png" type="Texture" id=2]
[ext_resource path="res://graphic/P2.png" type="Texture" id=3]
[ext_resource path="res://graphic/player1.png" type="Texture" id=4]
[ext_resource path="res://graphic/player2.png" type="Texture" id=5]
[ext_resource path="res://graphic/playerGreen.png" type="Texture" id=6]
[ext_resource path="res://graphic/playerPink.png" type="Texture" id=7]

[node name="ColorSelecterScreen" type="Node2D"]
script = ExtResource( 1 )

[node name="Player1Orange" type="Button" parent="."]
margin_left = -10.0
margin_top = 438.0
margin_right = 187.0
margin_bottom = 638.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 150, 70 )
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true

[node name="Player1Green" type="Button" parent="."]
margin_left = -10.0
margin_top = 520.0
margin_right = 187.0
margin_bottom = 720.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 150, 70 )
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="Player1Purple" type="Button" parent="."]
margin_left = 70.0
margin_top = 438.0
margin_right = 270.0
margin_bottom = 638.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 150, 70 )
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true

[node name="Player1Pink" type="Button" parent="."]
margin_left = 70.0
margin_top = 520.0
margin_right = 267.0
margin_bottom = 720.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 150, 70 )
icon = ExtResource( 7 )
icon_align = 1
expand_icon = true

[node name="Player2Orange" type="Button" parent="."]
margin_left = 390.0
margin_top = 438.0
margin_right = 590.0
margin_bottom = 638.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 150, 70 )
icon = ExtResource( 4 )
icon_align = 1
expand_icon = true

[node name="Player2Purple" type="Button" parent="."]
margin_left = 470.0
margin_top = 438.0
margin_right = 670.0
margin_bottom = 638.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 150, 70 )
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true

[node name="Player2Green" type="Button" parent="."]
margin_left = 390.0
margin_top = 520.0
margin_right = 587.0
margin_bottom = 720.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 150, 70 )
icon = ExtResource( 6 )
icon_align = 1
expand_icon = true

[node name="Player2Pink" type="Button" parent="."]
margin_left = 470.0
margin_top = 520.0
margin_right = 667.0
margin_bottom = 720.0
rect_scale = Vector2( 0.4, 0.4 )
rect_pivot_offset = Vector2( 150, 70 )
icon = ExtResource( 7 )
icon_align = 1
expand_icon = true

[node name="Start" type="Button" parent="."]
margin_left = 320.0
margin_top = 560.0
margin_right = 400.0
margin_bottom = 640.0
text = "START"

[node name="P1" type="TextureRect" parent="."]
margin_left = 120.0
margin_top = 380.0
margin_right = 200.0
margin_bottom = 460.0
texture = ExtResource( 2 )

[node name="P2" type="TextureRect" parent="."]
margin_left = 520.0
margin_top = 380.0
margin_right = 600.0
margin_bottom = 460.0
texture = ExtResource( 3 )

[connection signal="pressed" from="Player1Orange" to="." method="_on_Player1Orange_pressed"]
[connection signal="pressed" from="Player1Green" to="." method="_on_Player1Green_pressed"]
[connection signal="pressed" from="Player1Purple" to="." method="_on_Player1Purple_pressed"]
[connection signal="pressed" from="Player1Pink" to="." method="_on_Player1Pink_pressed"]
[connection signal="pressed" from="Player2Orange" to="." method="_on_Player2Orange_pressed"]
[connection signal="pressed" from="Player2Purple" to="." method="_on_Player2Purple_pressed"]
[connection signal="pressed" from="Player2Green" to="." method="_on_Player2Green_pressed"]
[connection signal="pressed" from="Player2Pink" to="." method="_on_Player2Pink_pressed"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
